# python-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: global_const.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: __init__.py  brain_games.py  calc_setup.py  cli.py  engine.py  even_setup.py  gcd.py  prime.py  progression.py
