[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = ""
authors = ["Denaid24 <Gamabyta@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
black = "^22.3.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.even_setup:main"
brain-calc = "brain_games.scripts.calc_setup:main"
brain-gcd = "brain_games.scripts.gcd:main"
brain-progression = "brain_games.scripts.progression:main"
brain-prime = "brain_games.scripts.prime:main"

